# sqlcpp-homeworks

./: .gitignore
2/1/: commands.sql
2/2/: commands.sql
4/: all_select_commands.sql
4/1/: insert_commands.sql
4/2/: select_commands.sql
4/3/: select_commands.sql
4/4/: select_commands.sql
5/: CMakeLists.txt  main.cpp
6/1/: 1.cpp  1.sln  1.vcxproj
6/2/: 2.cpp  2.sln  2.vcxproj
